Minor homepage resident spacing fixes

--- a/app/_scss/pages/_home.scss
+++ b/app/_scss/pages/_home.scss
@@ -50,7 +50,7 @@
 	}
 
 	.teaser {
-		margin: 0 auto 9.5em 5em;
+		margin: 0 auto 7.1em 5em;
 		width: 674px;
 
 		.intro {
